--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "clean": "rimraf .nyc_output lib coverage",
     "lint": "eslint \"tests\" \"src\" --ext .js,.ts",
     "eslint-fix": "npm run lint -- --fix",
-    "test": "mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
+    "test": "env-cmd -e tz mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "cover": "nyc --reporter=lcov npm run test",
-    "debug": "mocha --require ts-node/register/transpile-only --inspect \"tests/src/**/*.ts\" --reporter dot",
+    "debug": "env-cmd -e tz mocha --require ts-node/register/transpile-only --inspect \"tests/src/**/*.ts\" --reporter dot",
     "preversion": "npm run lint && npm test",
-    "update-fixtures": "ts-node --transpile-only ./tools/update-fixtures.ts"
+    "update-fixtures": "env-cmd -e tz ts-node --transpile-only ./tools/update-fixtures.ts"
   },
   "repository": {
     "type": "git",
@@ -45,6 +45,7 @@
     "@types/node": "^14.0.13",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
