--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-jsonc": "^0.8.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.2.0",
+    "eslint-plugin-regexp": "^0.1.1",
     "eslint-plugin-vue": "^7.2.0",
     "js-yaml": "^4.0.0",
     "mocha": "^7.0.0",
