--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/js-yaml": "^4.0.0",
     "@types/mocha": "^7.0.2",
     "@types/node": "^14.0.13",
+    "@types/semver": "^7.3.4",
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "env-cmd": "^10.1.0",
@@ -60,6 +61,7 @@
     "mocha": "^7.0.0",
     "nyc": "^15.1.0",
     "prettier": "^2.0.5",
+    "semver": "^7.3.4",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.7",
     "vue-eslint-parser": "^7.2.0"
