--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,25 @@
 {
-  "compilerOptions": {
-    "target": "es2015",
-    "strict": true,
-    "lib": ["es2020"],
-    "module": "commonjs",
-    "declaration": true,
-    "noImplicitAny": true,
-    "noImplicitReturns": true,
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "esModuleInterop": true,
-    "baseUrl": ".",
-    "paths": {
-      "*": ["./typings/*"]
-    }
-  },
-  "include": ["src/**/*.ts", "tests/**/*.ts", "tools/**/*.ts", "typings/**/*.ts"]
+    "compilerOptions": {
+        "target": "es2015",
+        "strict": true,
+        "lib": ["es2020"],
+        "module": "commonjs",
+        "declaration": true,
+        "noImplicitAny": true,
+        "noImplicitReturns": true,
+        "noFallthroughCasesInSwitch": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "esModuleInterop": true,
+        "baseUrl": ".",
+        "paths": {
+            "*": ["./typings/*"]
+        }
+    },
+    "include": [
+        "src/**/*.ts",
+        "tests/**/*.ts",
+        "tools/**/*.ts",
+        "typings/**/*.ts"
+    ]
 }
