--- a/.github/workflows/NodeCI.yml
+++ b/.github/workflows/NodeCI.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Setup
       run: npm run setup
     - name: Install Packages
-      run: npm install
+      run: npm install --legacy-peer-deps
     - name: Test
       run: npm test
   test-for-node8:
