--- a/.github/workflows/NodeCI.yml
+++ b/.github/workflows/NodeCI.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [10.13.x, 12.x, 13.x, 14.x, 15.x]
+        node-version: [12.x, 14.x, 16.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node.js ${{ matrix.node-version }}
@@ -48,6 +48,23 @@ jobs:
     - name: Install Target Packages
       run: |+
         npm i -D mocha@7 eslint@6
+        npx rimraf node_modules
+        npm install
+    - name: Test
+      run: npm test
+  test-for-node10:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Use Node.js 10.13.x
+      uses: actions/setup-node@v2
+      with:
+        node-version: 10.13.x
+    - name: Setup
+      run: npm run setup
+    - name: Install Target Packages
+      run: |+
+        npm i -D eslint@7
         npx rimraf node_modules
         npm install
     - name: Test
