--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "cover": "nyc --reporter=lcov npm run test",
         "debug": "env-cmd -e tz mocha --require ts-node/register/transpile-only --inspect \"tests/src/**/*.ts\" --reporter dot",
         "preversion": "npm run lint && npm test",
-        "update-fixtures": "env-cmd -e tz ts-node --transpile-only ./tools/update-fixtures.ts"
+        "update-fixtures": "env-cmd -e tz ts-node --transpile-only ./tools/update-fixtures.ts",
+        "benchmark": "ts-node --transpile-only benchmark/index.ts"
     },
     "repository": {
         "type": "git",
@@ -41,6 +42,7 @@
     "devDependencies": {
         "@iarna/toml": "^3.0.0",
         "@ota-meshi/eslint-plugin": "^0.10.0",
+        "@types/benchmark": "^2.1.1",
         "@types/eslint": "^7.2.0",
         "@types/eslint-visitor-keys": "^1.0.0",
         "@types/js-yaml": "^4.0.0",
@@ -49,6 +51,7 @@
         "@types/semver": "^7.3.4",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "benchmark": "^2.1.4",
         "env-cmd": "^10.1.0",
         "eslint": "^8.0.0",
         "eslint-config-prettier": "^8.0.0",
