--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
         "src/**/*.ts",
         "tests/**/*.ts",
         "tools/**/*.ts",
-        "typings/**/*.ts"
+        "typings/**/*.ts",
+        "benchmark/**/*"
     ]
 }
