--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "files": [
         "lib"
     ],
+    "engines": {
+        "node": "^12.22.0 || ^14.17.0 || >=16.0.0"
+    },
     "scripts": {
         "setup": "git submodule update --init",
         "prebuild": "npm run -s clean",
@@ -59,6 +62,7 @@
         "eslint-plugin-json-schema-validator": "^1.0.0",
         "eslint-plugin-jsonc": "^2.0.0",
         "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-node-dependencies": "^0.5.1",
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-regexp": "^1.0.0",
         "eslint-plugin-vue": "^8.0.0",
