--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "ast"
     ],
     "author": "Yosuke Ota",
+    "funding": "https://github.com/sponsors/ota-meshi",
     "license": "MIT",
     "bugs": {
         "url": "https://github.com/ota-meshi/toml-eslint-parser/issues"
