--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "debug": "env-cmd -e tz mocha --require ts-node/register/transpile-only --inspect \"tests/src/**/*.ts\" --reporter dot",
     "preversion": "npm run lint && npm test",
     "update-fixtures": "env-cmd -e tz ts-node --transpile-only ./tools/update-fixtures.ts",
-    "benchmark": "ts-node --transpile-only benchmark/index.ts"
+    "benchmark": "ts-node --transpile-only benchmark/index.ts",
+    "prerelease": "npm run clean && npm run build",
+    "release": "changeset publish",
+    "version:ci": "changeset version"
   },
   "repository": {
     "type": "git",
@@ -44,6 +47,8 @@
     "eslint-visitor-keys": "^3.0.0"
   },
   "devDependencies": {
+    "@changesets/changelog-github": "^0.4.6",
+    "@changesets/cli": "^2.24.2",
     "@iarna/toml": "^3.0.0",
     "@ota-meshi/eslint-plugin": "^0.13.0",
     "@types/benchmark": "^2.1.1",
@@ -76,5 +81,8 @@
     "ts-node": "^10.0.0",
     "typescript": "^5.0.0",
     "vue-eslint-parser": "^9.0.0"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
