--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
     "baseUrl": ".",
     "paths": {
       "*": ["./typings/*"]
-    }
+    },
+    "resolveJsonModule": true,
+
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*.ts",
