test: add toml-test workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,8 @@
     "typescript",
     "json",
     "jsonc",
-    "yaml"
+    "yaml",
+    "github-actions-workflow",
   ],
   "typescript.validate.enable": true,
   "javascript.validate.enable": false,
