--- a/.github/workflows/toml-test.yml
+++ b/.github/workflows/toml-test.yml
@@ -26,4 +26,4 @@ jobs:
         run: go install -v github.com/toml-lang/toml-test/cmd/toml-test@latest
       - name: Test
         run: ./run-toml-test.zsh
-        shell: zsh
+        shell: zsh {0}
