--- a/.github/workflows/toml-test.yml
+++ b/.github/workflows/toml-test.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-go@v2
       - name: Setup Node.js
         uses: actions/setup-node@v4
+      - name: Install zsh
+        run: sudo apt-get update; sudo apt-get install zsh
       - name: Setup
         run: npm run setup
       - name: Install Packages
