--- a/.github/workflows/toml-test.yml
+++ b/.github/workflows/toml-test.yml
@@ -31,3 +31,28 @@ jobs:
           export PATH="$(go env GOPATH)/bin:$PATH"
           ./run-toml-test.zsh
         shell: zsh {0}
+
+  test-for-1_1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Install Go
+        uses: actions/setup-go@v4
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+      - name: Install zsh
+        run: sudo apt-get update; sudo apt-get install zsh
+      - name: Setup
+        run: npm run setup
+      - name: Install Packages
+        run: npm install -f
+      - name: Build
+        run: npm run build
+      - name: Install toml-test
+        run: go install -v github.com/toml-lang/toml-test/cmd/toml-test@latest
+      - name: Test
+        run: |
+          export PATH="$(go env GOPATH)/bin:$PATH"
+          ./run-toml-test-toml1.1.zsh
+        shell: zsh {0}
