--- a/.github/workflows/NewOldBenchmark.yml
+++ b/.github/workflows/NewOldBenchmark.yml
@@ -5,7 +5,11 @@ on:
     branches: [main]
   pull_request:
     branches: [main]
-  workflow_dispatch: null
+  workflow_dispatch:
+    inputs:
+      compare_version:
+        default: latest
+        description: Versions to compare
 
 jobs:
   benchmark:
@@ -17,6 +21,9 @@ jobs:
         run: npm run setup
       - name: Install Packages
         run: npm install -f
+      - name: Install target
+        run: npm install -f toml-eslint-parser@${{ github.event.inputs.compare_version }}
+        if: ${{ github.event.inputs.compare_version != null }}
       - name: Build
         run: npm run build
       - name: Benchmark
