--- a/package.json
+++ b/package.json
@@ -67,9 +67,10 @@
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-jsdoc": "^48.2.12",
     "eslint-plugin-json-schema-validator": "^5.0.0",
     "eslint-plugin-jsonc": "^2.0.0",
-    "eslint-plugin-n": "^16.0.0",
+    "eslint-plugin-n": "^17.2.0",
     "eslint-plugin-node-dependencies": "^0.12.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-regexp": "^2.0.0",
