--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:meta": "ts-node --transpile-only ./tools/update-meta.ts",
     "build:tsc": "tsc --project ./tsconfig.build.json",
     "clean": "rimraf .nyc_output lib coverage",
-    "lint": "eslint . --ext .js,.ts,.json",
+    "lint": "eslint .",
     "eslint-fix": "npm run lint -- --fix",
     "test": "env-cmd -e tz mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "cover": "nyc --reporter=lcov npm run test",
@@ -53,7 +53,7 @@
     "@changesets/cli": "^2.24.2",
     "@eslint-community/eslint-plugin-eslint-comments": "^4.3.0",
     "@iarna/toml": "^3.0.0",
-    "@ota-meshi/eslint-plugin": "^0.17.0",
+    "@ota-meshi/eslint-plugin": "^0.17.5",
     "@types/benchmark": "^2.1.1",
     "@types/eslint": "^8.0.0",
     "@types/eslint-visitor-keys": "^3.0.0",
@@ -61,11 +61,10 @@
     "@types/mocha": "^10.0.0",
     "@types/node": "^20.0.0",
     "@types/semver": "^7.3.4",
-    "@typescript-eslint/eslint-plugin": "^7.0.0",
-    "@typescript-eslint/parser": "^7.0.0",
+    "@typescript-eslint/parser": "^7.14.1",
     "benchmark": "^2.1.4",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.0.0",
+    "eslint": "^9.5.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-jsdoc": "^48.2.12",
@@ -85,6 +84,7 @@
     "toml-eslint-parser": "^0.10.0",
     "ts-node": "^10.0.0",
     "typescript": "~5.0.0",
+    "typescript-eslint": "^7.14.1",
     "vue-eslint-parser": "^9.0.0"
   },
   "publishConfig": {
