--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -3,17 +3,27 @@ name: 👔 Format
 on:
   workflow_dispatch: null
 
+permissions:
+  contents: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   format:
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
       - name: Setup node
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v6
       - name: Install deps
         run: npm install
+      - name: Build
+        run: npm run build
       - name: Format
         run: npm run eslint-fix
       - name: Commit
