--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
     "clean": "rimraf .nyc_output lib coverage",
     "lint": "eslint .",
     "eslint-fix": "npm run lint -- --fix",
-    "test": "env-cmd -e tz mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
+    "test": "env-cmd -e tz -- mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "cover": "nyc --reporter=lcov npm run test",
-    "debug": "env-cmd -e tz mocha --require ts-node/register/transpile-only \"tests/src/**/*.ts\" --reporter dot",
+    "debug": "env-cmd -e tz -- mocha --require ts-node/register/transpile-only \"tests/src/**/*.ts\" --reporter dot",
     "preversion": "npm run lint && npm test",
-    "update-fixtures": "env-cmd -e tz ts-node --transpile-only ./tools/update-fixtures.ts",
+    "update-fixtures": "env-cmd -e tz -- ts-node --transpile-only ./tools/update-fixtures.ts",
     "benchmark": "ts-node --transpile-only benchmark/index.ts",
     "prerelease": "npm run clean && npm run build",
     "release": "changeset publish",
-    "version:ci": "env-cmd -e version-ci npm run build:meta && changeset version"
+    "version:ci": "env-cmd -e version-ci -- npm run build:meta && changeset version"
   },
   "repository": {
     "type": "git",
