--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-jsdoc": "^61.0.0",
-    "eslint-plugin-json-schema-validator": "^5.0.0",
+    "eslint-plugin-json-schema-validator": "^5.5.0",
     "eslint-plugin-jsonc": "^2.0.0",
     "eslint-plugin-n": "^17.2.0",
     "eslint-plugin-node-dependencies": "^1.0.0",
@@ -76,6 +76,7 @@
     "eslint-plugin-regexp": "^2.0.0",
     "eslint-plugin-vue": "^10.0.0",
     "eslint-plugin-yml": "^1.0.0",
+    "globals": "^17.0.0",
     "js-yaml": "^4.0.0",
     "mocha": "^11.0.0",
     "nyc": "^17.0.0",
