--- a/.github/workflows/toml-test.yml
+++ b/.github/workflows/toml-test.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-go@v6
       - name: Setup Node.js
         uses: actions/setup-node@v6
+        with:
+          node-version: "lts/*"
       - name: Install zsh
         run: sudo apt-get update; sudo apt-get install zsh
       - name: Setup
@@ -41,6 +43,8 @@ jobs:
         uses: actions/setup-go@v6
       - name: Setup Node.js
         uses: actions/setup-node@v6
+        with:
+          node-version: "lts/*"
       - name: Install zsh
         run: sudo apt-get update; sudo apt-get install zsh
       - name: Setup
