--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
   "scripts": {
     "setup": "git submodule update --init",
     "prebuild": "npm run -s clean",
-    "build": "npm run build:meta && npm run build:tsdown",
-    "build:meta": "tsx ./tools/update-meta.ts",
+    "build": "npm run build:tsdown",
     "build:tsdown": "tsdown",
     "clean": "rimraf .nyc_output lib coverage",
     "lint": "eslint .",
     "eslint-fix": "npm run lint -- --fix",
     "test": "env-cmd -e tz -- tsx ./node_modules/mocha/bin/mocha.js \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "cover": "nyc --reporter=lcov npm run test",
-    "debug": "env-cmd -e tz -- tsx ./node_modules/mocha/bin/mocha.js \"tests/src/**/*.ts\" --reporter dot",
+    "debug": "env-cmd -e tz -- node --experimental-strip-types ./node_modules/mocha/bin/mocha.js \"tests/src/**/*.ts\" --reporter dot",
     "preversion": "npm run lint && npm test",
     "update-fixtures": "env-cmd -e tz -- tsx ./tools/update-fixtures.ts",
     "benchmark": "tsx ./benchmark/index.ts",
