--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,8 @@
       "*": ["./typings/*"]
     },
     "resolveJsonModule": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true,
 
     "skipLibCheck": true
   },
